--- a/public/Jenkinsfile
+++ b/public/Jenkinsfile
@@ -1,42 +1,43 @@
 pipeline {
     agent any
 
-    tools
-    {
-        node 'node'
-    }
-
     stages {
         stage('Checkout') {
             steps {
-                // Checkout the source code from your version control system (e.g., Git)
-                git 'https://github.com/KoushaliyaSree/HelloWorldJenkins.git'
+                // Checkout your code from your version control system
+               git 'https://github.com/KoushaliyaSree/HelloWorldJenkins.git'
             }
         }
-
-
-
+        
         stage('Install Dependencies') {
             steps {
-               
-                // Install dependencies using npm
+                // Install Node.js and npm if necessary
                 sh 'npm install'
             }
         }
-
+        
         stage('Build') {
             steps {
-                // Build the React application
+                // Build your React application
                 sh 'npm run build'
             }
         }
-        stage('test') {
+        
+        stage('Test') {
             steps {
-                // Build the React application
-                echo "test"
+                // Run tests if you have them
+                echo 'npm test'
             }
         }
 
-    
+        stage('Deploy') {
+            steps {
+                // Deploy your application to a server
+                // You may need to adjust this step based on your deployment strategy
+                'npm run deploy'
+            }
+        }
     }
+    
+    
 }
